--- a/.env
+++ b/.env
@@ -15,13 +15,13 @@
 
 ###> symfony/framework-bundle ###
 APP_ENV=dev
-APP_SECRET=59d05d95f8aa5019aab312a73a0a7af8
+APP_SECRET=55cb9c5e4f6502b900e51d4d19fbb840
 #TRUSTED_PROXIES=127.0.0.0/8,10.0.0.0/8,172.16.0.0/12,192.168.0.0/16
 #TRUSTED_HOSTS='^(localhost|example\.com)$'
 ###< symfony/framework-bundle ###
 
 ###> symfony/mailer ###
-# MAILER_DSN=null://null
+# MAILER_DSN=smtp://localhost
 ###< symfony/mailer ###
 
 ###> doctrine/doctrine-bundle ###
@@ -29,6 +29,6 @@ APP_SECRET=59d05d95f8aa5019aab312a73a0a7af8
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
-# DATABASE_URL="mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7&charset=utf8mb4"
-DATABASE_URL="postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=13&charset=utf8"
+ DATABASE_URL="mysql://root:@127.0.0.1:3306/bruteforce?serverVersion=mariadb-10.4.11"
+#DATABASE_URL="postgresql://symfony:ChangeMe@127.0.0.1:5432/app?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
